<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/maps"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="Maps" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="Profile" />
</menu>