...
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingEnd="0dp" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="Email"
        android:inputType="textEmailAddress"
...
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have an account?"/>

        <TextView
            android:id="@+id/login_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" Login Now"
            android:textStyle="bold"/>
    </LinearLayout>

...
